kubernetes/apps/base/tools/headlamp/httproute.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headlamp
spec:
  hostnames:
    - ${SUBDOMAIN}.${DOMAIN}
  parentRefs:
    - name: ${GATEWAY:-envoy-internal}
      namespace: network
  rules:
    - backendRefs:
        - name: headlamp
          namespace: tools
          port: 80
